Basic functionality for environments complete

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 #Datasource properties :
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/zootest
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/zootest
 spring.datasource.username=root
 spring.datasource.password=whgIf@ke1t
 
@@ -8,6 +10,7 @@ spring.datasource.password=whgIf@ke1t
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto: create-drop
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 #Thymeleaf Configuration:
 spring.thymeleaf.enabled=true
